--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en-US">
   <head>
     <meta charset="utf-8">
     <title>radio</title>
-		<link rel="icon" href="radio.png" sizes="512x512" />
-		<link rel="apple-touch-icon" href="radio.png" />
-		<link rel="apple-touch-icon-precomposed" href="radio.png" />
 		<meta name="viewport" content="width=device-width">
-		<meta name="robots" content="noindex,nofollow" />
+		<!-- <meta name="robots" content="noindex,nofollow" /> -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/b39290514d.js"></script>
     <script src="radio.js"></script>
     <link rel="stylesheet" href="radio.css">
   </head>
   <body>
 		<div id="radio">
-    <audio src="https://radio.example.cz/radio.mp3" preload="none"></audio>
-		<ul id="info">
-		</ul>
-		<div id="cont">
-		<div id="ppbutton" class="icon-play-circled2"><img id="cover"></div>
-		</div>
+            <audio src="http://172.104.15.166:8000/lafaceb.mp3" preload="none"></audio>
+            <div id="cont">
+                <div id="ppbutton" class="fas fa-play"></div>
+            </div>
 		</div>
   </body>
 </html>
