Stripped down minimal player

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
 		<div id="radio">
-            <audio src="http://172.104.15.166:8000/lafaceb.mp3" preload="none"></audio>
+            <audio src="http://172.104.15.166:8000/lafaceb.mp3" autoplay preload="none" muted="true"></audio>
             <div id="cont">
                 <div id="ppbutton" class="fas fa-play"></div>
             </div>
